--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "mongoose": "^5.0.10",
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.4.16",
     "parser": "^0.1.4"
   },
   "devDependencies": {},
